--- a/paper/agda.sty
+++ b/paper/agda.sty
@@ -21,6 +21,8 @@
 \newunicodechar{∀}{\ensuremath{\mathnormal\forall}}
 \newunicodechar{⇒}{\ensuremath{\mathnormal\Rightarrow}}
 \newunicodechar{↪}{\ensuremath{\mathnormal\hookrightarrow}}
+\newunicodechar{⇄}{\ensuremath{\mathnormal\rightleftarrows}}
+\newunicodechar{∘}{\ensuremath{\mathnormal\circ}}
 \newunicodechar{⊤}{\ensuremath{\mathnormal\top}}
 \newunicodechar{τ}{\ensuremath{\mathnormal\tau}}
 \newunicodechar{ƛ}{\ensuremath{\mathnormal\lambdabar}}
@@ -33,10 +35,11 @@
 \newunicodechar{⊎}{\ensuremath{\mathnormal\uplus}}
 \newunicodechar{≋}{\ensuremath{\mathnormal\cong}}
 \newunicodechar{π}{\ensuremath{\mathnormal\pi}}
+\newunicodechar{η}{\ensuremath{\mathnormal\eta}}
 \newunicodechar{β}{\ensuremath{\mathnormal\beta}}
 \newunicodechar{ξ}{\ensuremath{\mathnormal\xi}}
 \newunicodechar{ζ}{\ensuremath{\mathnormal\zeta}}
-\newunicodechar{Δ}{\ensuremath{\mathnormal\Lambda}}
+\newunicodechar{Δ}{\ensuremath{\mathnormal\Delta}}
 \newunicodechar{σ}{\ensuremath{\mathnormal\sigma}}
 \newunicodechar{Σ}{\ensuremath{\mathnormal\Sigma}}
 \newunicodechar{ρ}{\ensuremath{\mathnormal\rho}}
@@ -44,6 +47,8 @@
 \newunicodechar{⟫}{\ensuremath{\mathnormal\rrangle}}
 \newunicodechar{₁}{\ensuremath{{}_1}}
 \newunicodechar{₂}{\ensuremath{{}_2}}
+\newunicodechar{ₗ}{\ensuremath{{}_l}}
+\newunicodechar{ᵣ}{\ensuremath{{}_r}}
 
 \usepackage{amsthm}
 \theoremstyle{definition}
