--- a/paper/code/subs.tex
+++ b/paper/code/subs.tex
@@ -101,7 +101,7 @@
 \end{code}
 %</operators>
 
-%<*subs>
+%<*rename>
 \begin{code}
 	\\[\AgdaEmptyExtraSkip]%
 	\>[0]\AgdaFunction{ext}\AgdaSpace{}%
@@ -118,7 +118,7 @@
 	\AgdaBound{Δ}\<%
 	\\
 	\>[.][@{}l@{}]\<[87I]%
-	\>[4]\AgdaComment{---------------------------------}\<%
+	\>[4]\AgdaComment{--------------------}\<%
 	\\
 	%
 	\>[2]\AgdaSymbol{→}\AgdaSpace{}%
@@ -262,11 +262,11 @@
 	\AgdaFunction{rename}\AgdaSpace{}%
 	\AgdaBound{ρ}\AgdaSpace{}%
 	\AgdaBound{N}\<%
-	\\
-	%
-	\\[\AgdaEmptyExtraSkip]%
-	%
-	\\[\AgdaEmptyExtraSkip]%
+\end{code}
+%</rename>
+
+%<*subst>
+\begin{code}
 	\>[0]\AgdaFunction{exts}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
@@ -281,7 +281,7 @@
 	\AgdaBound{Δ}\<%
 	\\
 	\>[.][@{}l@{}]\<[185I]%
-	\>[4]\AgdaComment{---------------------------------}\<%
+	\>[4]\AgdaComment{--------------------}\<%
 	\\
 	%
 	\>[2]\AgdaSymbol{→}\AgdaSpace{}%
@@ -495,4 +495,4 @@
 	\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
 	\AgdaBound{N}\<%
 \end{code}
-%</subs>
+%</subst>
