--- a/paper/agda.sty
+++ b/paper/agda.sty
@@ -43,6 +43,8 @@
 \newunicodechar{σ}{\ensuremath{\mathnormal\sigma}}
 \newunicodechar{Σ}{\ensuremath{\mathnormal\Sigma}}
 \newunicodechar{ρ}{\ensuremath{\mathnormal\rho}}
+\newunicodechar{⇑}{\ensuremath{\mathnormal\Uparrow}}
+\newunicodechar{⇓}{\ensuremath{\mathnormal\Downarrow}}
 \newunicodechar{⟪}{\ensuremath{\mathnormal\llangle}}
 \newunicodechar{⟫}{\ensuremath{\mathnormal\rrangle}}
 \newunicodechar{₁}{\ensuremath{{}_1}}
