--- a/paper/agda.sty
+++ b/paper/agda.sty
@@ -14,16 +14,25 @@
 \newcommand{\lambdabar}{{\mkern0.75mu\mathchar '26\mkern -9.75mu\lambda}}
 \newcommand{\llangle}{\langle\!\langle}
 \newcommand{\rrangle}{\rangle\!\rangle}
+\newcommand{\llsquare}{[ \! [}
+\newcommand{\rrsquare}{] \! ]}
+\newcommand{\rectangle}{\rule{0.4em}{0.7em}}
 
 \usepackage{catchfilebetweentags}
 \usepackage{newunicodechar}
 \newunicodechar{≡}{\ensuremath{\mathnormal\equiv}}
+\newunicodechar{ℕ}{\ensuremath{\mathbb{N}}}
 \newunicodechar{∀}{\ensuremath{\mathnormal\forall}}
+\newunicodechar{∃}{\ensuremath{\mathnormal\exists}}
 \newunicodechar{⇒}{\ensuremath{\mathnormal\Rightarrow}}
 \newunicodechar{↪}{\ensuremath{\mathnormal\hookrightarrow}}
-\newunicodechar{⇄}{\ensuremath{\mathnormal\rightleftarrows}}
+\newunicodechar{⇄}{\ensuremath{\mathnormal\rightleftarrows}} 
+\newunicodechar{⇝}{\ensuremath{\mathnormal\rightsquigarrow}}
+\newunicodechar{∎}{\ensuremath{\rectangle}}
 \newunicodechar{∘}{\ensuremath{\mathnormal\circ}}
+\newunicodechar{⊗}{\ensuremath{\mathnormal\otimes}}
 \newunicodechar{⊤}{\ensuremath{\mathnormal\top}}
+\newunicodechar{⊥}{\ensuremath{\mathnormal\bot}}
 \newunicodechar{τ}{\ensuremath{\mathnormal\tau}}
 \newunicodechar{ƛ}{\ensuremath{\mathnormal\lambdabar}}
 \newunicodechar{λ}{\ensuremath{\mathnormal\lambda}}
@@ -31,6 +40,7 @@
 \newunicodechar{∋}{\ensuremath{\mathnormal\ni}}
 \newunicodechar{Γ}{\ensuremath{\mathnormal\Gamma}}
 \newunicodechar{⊢}{\ensuremath{\mathnormal\vdash}}
+\newunicodechar{⊨}{\ensuremath{\mathnormal\vDash}}
 \newunicodechar{⋆}{\ensuremath{\mathnormal\star}}
 \newunicodechar{⊎}{\ensuremath{\mathnormal\uplus}}
 \newunicodechar{≋}{\ensuremath{\mathnormal\cong}}
@@ -47,6 +57,10 @@
 \newunicodechar{⇓}{\ensuremath{\mathnormal\Downarrow}}
 \newunicodechar{⟪}{\ensuremath{\mathnormal\llangle}}
 \newunicodechar{⟫}{\ensuremath{\mathnormal\rrangle}}
+\newunicodechar{⟦}{\ensuremath{\mathnormal\llsquare}}
+\newunicodechar{⟧}{\ensuremath{\mathnormal\rrsquare}} 
+\newunicodechar{﹙}{(}
+\newunicodechar{﹚}{)}
 \newunicodechar{₁}{\ensuremath{{}_1}}
 \newunicodechar{₂}{\ensuremath{{}_2}}
 \newunicodechar{ₗ}{\ensuremath{{}_l}}
