--- a/paper/references.bib
+++ b/paper/references.bib
@@ -72,6 +72,19 @@
 	journal = {Communications of the ACM},
 	doi = {10.1145/2699407}
 }
+@inproceedings{Howard,
+	title={The formulae-as-types notion of construction},
+	author={William A. Howard},
+	year={1969},
+	url={https://api.semanticscholar.org/CorpusID:118720122}
+}
+@book{Curry,
+	author = {Haskell B. Curry and Robert M. Feys},
+	title = {Combinatory Logic Vol. 1},
+	editor = {},
+	year = {1958},
+	publisher = {Amsterdam, Netherlands: North-Holland Publishing Company}
+}
 @article{lambda_cube,
 	title={Introduction to generalized type systems},
 	volume={1},
@@ -97,6 +110,7 @@
 	url = {https://www.sciencedirect.com/science/article/pii/S0049237X09701892},
 	author = {Per Martin-Löf}
 }
+
 @article{debrujin_index,
 	title = {Lambda calculus notation with nameless dummies, a tool for automatic formula manipulation, with application to the {Church}-{Rosser} theorem},
 	volume = {75},
@@ -106,4 +120,12 @@
 	author = {de Bruijn, N.G},
 	year = {1972},
 	pages = {381--392}
+}
+@book{reynolds_1998,
+	place={Cambridge},
+	title={Theories of Programming Languages},
+	DOI={10.1017/CBO9780511626364},
+	publisher={Cambridge University Press},
+	author={Reynolds, John C.},
+	year={1998}
 }
